Refactor tenant content handling and navigation
* Created a tenant content folder `/wwwroot/tenants-content`
* HTML content is file <topic>.html
* Metadata is in file <topic>.json
* Created new home.html, home.json, news.html, news.json, rule-of-game.html, and rule-of-game.json files with metadata and placeholder content.
* Added a new home.cshtml view to render tenant content.
* Simplified footer in _Layout.cshtml by removing tenant-specific logic for the "Contact" link.
* Updated `WebAppStartup` to use scoped `MainNavigationNodeBuilder` and singleton `TenantContentProvider`

* Updated WebAppStartup.cs to use `MainNavigationNodeBuilder` instead of `CustomMainNavigationNodeBuilder `
* Deleted `CustomMainNavigationNodeBuilder` class and related usings.
* Added class `ITenantContentProvider` to handel tenant content
* Added a new `ContentItem` class in ContentItem.cs to represent a content item for a tenant.
* Introduced a new interface `ITenantContentProvider`
* Implemented `ITenantContentProvider` interface in `TenantContentProvider`
* Added new methods in `MainNavigationNodeBuilder` to create tenant-specific navigation nodes.
* Updated `TenantContent` controller to use `ITenantContentProvider` and added a new Home action.

* Updated `IMainNavigationNodeBuilder` interface to make GetNavigationNodes method asynchronous.
* Updated `MainNavigation` component and `MainNavigationComponentModelExtensions` to use asynchronous methods.
* Updated Default.cshtml and NavigationNodeChildDropdownPartial.cshtml to use asynchronous methods for CSS class generation.

* Updated .gitignore to include tenants-content directory

--- a/League/Components/MainNavigationNodeBuilder.de.resx
+++ b/League/Components/MainNavigationNodeBuilder.de.resx
@@ -138,14 +138,14 @@
   <data name="Home" xml:space="preserve">
     <value>Startseite</value>
   </data>
-  <data name="Info" xml:space="preserve">
-    <value>Info</value>
+  <data name="My League" xml:space="preserve">
+    <value>Meine Liga</value>
   </data>
-  <data name="League" xml:space="preserve">
-    <value>Liga</value>
+  <data name="Leagues" xml:space="preserve">
+    <value>Ligen</value>
   </data>
-  <data name="League Overview" xml:space="preserve">
-    <value>Liga-Übersicht</value>
+  <data name="Leagues Overview" xml:space="preserve">
+    <value>Ligen-Übersicht</value>
   </data>
   <data name="Manage account" xml:space="preserve">
     <value>Konto verwalten</value>
@@ -159,14 +159,8 @@
   <data name="My team" xml:space="preserve">
     <value>Mein Team</value>
   </data>
-  <data name="News" xml:space="preserve">
-    <value>Aktuelles</value>
-  </data>
   <data name="Register team for next season" xml:space="preserve">
     <value>Team für nächste Saison anmelden</value>
-  </data>
-  <data name="Rule of game" xml:space="preserve">
-    <value>Spielordnung</value>
   </data>
   <data name="Sign in" xml:space="preserve">
     <value>Anmelden</value>
@@ -188,5 +182,14 @@
   </data>
   <data name="Volleyball League" xml:space="preserve">
     <value>Volleyball-Liga</value>
+  </data>
+  <data name="News" xml:space="preserve">
+    <value>Aktuelles</value>
+  </data>
+  <data name="Rule of game" xml:space="preserve">
+    <value>Spielordnung</value>
+  </data>
+  <data name="Contact" xml:space="preserve">
+    <value>Kontakt</value>
   </data>
 </root>
