--- a/League/Views/TeamApplication/List.de.resx
+++ b/League/Views/TeamApplication/List.de.resx
@@ -138,10 +138,10 @@
   <data name="Registered" xml:space="preserve">
     <value>Angemeldet</value>
   </data>
-  <data name="The registration deadline for this season has unfortunately already expired" xml:space="preserve">
-    <value>Die Anmeldefrist für die diese Saison ist leider bereits abgelaufen</value>
-  </data>
   <data name="Closing date" xml:space="preserve">
     <value>Anmeldeschluss</value>
+  </data>
+  <data name="We are currently outside the registration period." xml:space="preserve">
+    <value>Wir befinden uns derzeit außerhalb der Anmeldefrist.</value>
   </data>
 </root>
