`Salutation` in Contact form and PersonalDetails form
Changed option for `Salutation` in Contact form and PersonalDetails form: male - female - none

--- a/League/Views/Contact/Index.de.resx
+++ b/League/Views/Contact/Index.de.resx
@@ -141,4 +141,7 @@
   <data name="to" xml:space="preserve">
     <value>an</value>
   </data>
+  <data name="none" xml:space="preserve">
+    <value>keine</value>
+  </data>
 </root>
