Add team manager checks and warnings for missing phone numbers
Updated the `Index` method in `Manage.cs` to check user claims for team managers. Introduced `IsTeamManager` property in `IndexViewModel` and updated the view to display warnings for team managers without a primary phone number.

Modified `IndexViewModel.cs` to include the new property. Updated `Index.cshtml` to conditionally render warning messages.

Localized strings added to `Index.de.resx` and `MyTeam.de.resx` for the new warning messages. Similar checks implemented in `MyTeam.cshtml` for managers missing their primary phone number.

--- a/League/Views/Manage/Index.de.resx
+++ b/League/Views/Manage/Index.de.resx
@@ -150,4 +150,7 @@
   <data name="Last update" xml:space="preserve">
     <value>Letzte Änderung</value>
   </data>
+  <data name="You're a team contact - please add" xml:space="preserve">
+    <value>Du bist Teamkontakt - bitte angeben</value>
+  </data>
 </root>
